--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@ th:src="@{/webjars/jquery/2.1.3/jquery.min.js}"></script>
     <a href="https://twiter.com/{{fromUser}}/status/{{id}}" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
    </div>
   </div>
-  <div class="panel-body">{{unmodifiedText}}</div>
+  <div class="panel-body">{{{unmodifiedText}}}</div>
  </div>
 </script>
 
